--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,13 @@
 
 # Name of your site (displayed in the header)
 name: doebi
+author: "Christoph Döberl"
 
 # Short bio or description (displayed in the header)
-description: my thoughts and projects
+description: my projects
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar:
+avatar: /images/head.png
 
 #
 # Flags below are optional
@@ -35,15 +36,9 @@ disqus:
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url: http://femmebot.github.io
+url: http://doebi.github.io
 
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
-baseurl: "/projects"
+baseurl:
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -51,7 +46,7 @@ baseurl: "/projects"
 
 markdown: kramdown
 highlighter: pygments
-permalink: /:title/
+permalink: /projects/:title/
 
 # The release of Jekyll Now that you're using
 version: v1.0.0
