--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ baseurl:
 #
 
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 permalink: /projects/:title/
 
 # The release of Jekyll Now that you're using
