--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-101064367-1
 
 url: http://doebi.github.io
 
